--- a/style.css
+++ b/style.css
@@ -5,6 +5,10 @@ body {
     color: #333;
     margin: 0;
     padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
 }
 
 /* Стиль для заголовка */
